# music_critic_v2

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: README.md
docs/: ARCHITECTURE.md  CANONICAL_MIDI_RENDERER.md  DATA_CONTRACT.md  DECISIONS.md  HARMONIC_SUPERVISION.md  HOOKTHEORY_FIELD_AUDIT.md  HOOKTHEORY_MIGRATION.md  IMPLEMENTATION_PLAN.md  LEGACY_DRIFT_REPORT.md  LEGACY_REFERENCE.md  POP909_ADAPTER_CONTRACT.md  POP909_CL_ADAPTER_CONTRACT.md  POP909_CL_FIELD_AUDIT.md  POP909_FIELD_AUDIT.md  POP909_ORIGINAL_ADAPTER_CONTRACT.md  POP909_ORIGINAL_FIELD_AUDIT.md  ROADMAP.md  STATUS.md  legacy_snapshot.json
scripts/: audit_hooktheory_adapter_semantics.py  audit_hooktheory_legacy.py  audit_hooktheory_midi_ambiguities.py  audit_pop909.py  audit_pop909_cl.py  audit_pop909_original.py  benchmark_graph_builder.py  check_legacy_unchanged.py  compare_hooktheory_midi_rendering.py  render_hooktheory_midi.py  smoke_hooktheory_adapter.py  smoke_midi_adapter.py
src/music_critic/: __init__.py
tests/: test_import.py  test_repository_contract.py
tests/adapters/: test_hooktheory_adapter.py  test_hooktheory_parser.py  test_midi.py
tests/audit/: test_hooktheory_audit_script.py  test_hooktheory_golden_fixtures.py  test_hooktheory_midi_ambiguities.py  test_hooktheory_midi_render_cli.py  test_hooktheory_midi_render_comparison.py  test_hooktheory_semantic_audit_script.py  test_pop909_audit.py  test_pop909_cl_audit.py  test_pop909_original_audit.py
tests/data/: conftest.py  test_schema.py  test_serialization.py  (+2 more)
(+64 files in other folders)
