[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "music-critic-v2"
version = "0.1.0"
description = "Raw-symbolic-first Music Critic V2 research codebase"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mido>=1.3,<2",
    "torch>=2.8,<3",
    "torch-geometric>=2.7,<3",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
